refactor: modernize to List.copyOf/Map.copyOf
Replace Collections.unmodifiableList/Map with Java 10+ List.copyOf
and Map.copyOf for truly immutable collections without wrapper overhead.

Spec: docs/superpowers/specs/2026-03-15-codebase-cleanup-design.md §2.5